--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -6,3 +6,12 @@
   year={2013},
   organization={IEEE}
 }
+
+@inproceedings{example3,
+  title={An example conference paper},
+  author={Bighetti, Nelson and Ford, Robert},
+  booktitle={Source Themes Conference},
+  pages={1--6},
+  year={2013},
+  organization={IEEE}
+}
